# ainfera-microsoft-agent-framework

./: AGENTS.md  README.md  curl-example.sh  pyproject.toml
.github/workflows/: ci.yml
ainfera_maf/: __init__.py  _client.py
examples/: minimal_agent.py
tests/: test_client_config.py
